fixing spacing issues across all current pages

--- a/public/css/preferences.css
+++ b/public/css/preferences.css
@@ -181,6 +181,7 @@ input {
     width: 768px;
     max-width: 100%;
     min-height: 480px;
+    margin: 2em auto;
 }
 
 .form-container {
